# ClusFL

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  setup_clusfl_repo.py
clusfl/: __init__.py  client.py  cluster.py  datasets.py  experiment.py  federated.py  metrics.py  server.py  utils.py
clusfl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clusfl/clients/: kmedian_client.py
clusfl/data/: base_generator.py  non_iid_generator.py
clusfl/models/: __init__.py  base_model.py
clusfl/models/kmeans/: kmeans.py
clusfl/models/kmedian/: approx_kmedian.py  kmedian.py
clusfl/server/: base_server.py  kmedian_server.py
examples/: fed-kmedian.py  fed_kmedian.py  kmedian.py
