[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clusfl"
version = "0.1.0"
description = "A Federated Learning library for k-Median clustering"
authors = [{ name = "Martin Bravo", email = "martin16bravo2@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "scikit_learn_extra",
]

[tool.setuptools]
packages = ["clusfl"]
